



2007-04-08:

	Filename completion made on by default for Windows

	
2007-04-07:

	Filename completion using Sys.glob added (off by default)

	
2007-04-04:

	Subversion hosting moved to
	https://svn.r-project.org/R-packages/trunk/rcompgen.  rcompgen is
	made a recommended package, with the intent of using it as a
	backend in official R front-ends to provide completion.
	
	
2007-03-28:

	Added some support code to help with completion in Rgui (Windows).
	This can be useful in other front-ends as well, especially those
	with no inherent infrastructure for completion.  Basically, these
	changes provide a way to perform all steps required for
	completion, determination of tokens, given only the current
	incomplete buffer and the cursor position.
	

2007-02-20:

	Added support for user defined argument list for specific
	functions (e.g. par, options) where the formal argument list is
	not useful enough.


2007-01-09:

	Added ? as a non-breaker for .guessTokenFromLine()

2006-12-22:

	Disabled function checking by default, since that leads to loading
	of lazy loaded symbols all over the place.  Added a new unexported
	function .guessTokenFromLine() for backends that don't
	automatically do token determination.  Also added a
	proof-of-concept implementation of rcompgen-based completion for
	ESS in inst/examples/altesscomp.el
	
	
2006-11-11:

	added support for special completions inside library(), require()
	and data(); help completions after "?"; bumped version to 0.1-2

2006-11-10: 

	split rcompletion 0.0-12 into rcompletion_0.1-1 (readline binding)
	and rcompgen_0.1-1 (code to generate completions, possibly useful
	in contexts other than readline).  It is anticipated that further
	development will be restricted to rcompgen.

