@@ -1,6 +1,6 @@
 Package: rcompgen
-Version: 0.1-10
-Date: 2007/04/08
+Version: 0.1-11
+Date: 2007/04/30
 Title: Completion generator for R
 Author: Deepayan Sarkar <deepayan.sarkar@r-project.org>
 Maintainer: Deepayan Sarkar <deepayan.sarkar@r-project.org>
@@ -10,4 +10,4 @@ Depends: R (>= 2.5.0)
 Imports: utils, methods
 LazyLoad: yes
 License: GPL version 2 or later
-Packaged: Sun Apr  8 16:28:27 2007; dsarkar
+Packaged: Mon Apr 30 14:13:59 2007; dsarkar
